refactor(sqlpolicy): 优化 SqlClassifier 的 SQL 解析逻辑
- 使用 switch 表达式重构 classifyParsedStatement 方法，提高代码简洁性和可读性
- 统一正则表达式定义格式，去除多余换行符
- 调整类中方法调用，避免使用 List.get(0) 改用更安全方法获取首元素
- 在 cleanIdentifier 处理逻辑中增加空字符串判定，避免异常情况
- 在 McpAuthenticationToken 中新增 equals 和 hashCode 方法，完善认证结果比较机制
- 在 McpTokenValidationResult 中添加 Serializable 支持及序列号定义
- 优化 McpEndpointGuardFilter 中日志记录，增加 LOGGER 是否启用的判断，避免无效日志操作